- load user from db - refactored db interface to be more flexible with other DBs
