# server/controllers/Behaviours.js
@@ -5,7 +5,7 @@ var url = require('url');
 
 var Behaviours = require('./BehavioursService');
 
-module.exports.options = function options (req, res, next) {
+module.exports.optionsBehaviours = function options (req, res, next) {
   Behaviours.options(req.swagger.params, res, next);
 };
 
@@ -13,6 +13,6 @@ module.exports.get = function get (req, res, next) {
   Behaviours.get(req.swagger.params, res, next);
 };
 
-module.exports.set = function set (req, res, next) {
+module.exports.setBehaviours = function set (req, res, next) {
   Behaviours.set(req.swagger.params, res, next);
 };
